Clamp the maximum width and height of user images. This ensures they can't get too big but means we don't get any upscaling.

--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -706,11 +706,13 @@ abbr.geo {
 }
 
 img.user_image {
-  width: 100px;
+  max-width: 100px;
+  max-height: 100px;
   border: 1px solid black;
 }
 
 img.user_thumbnail {
-  width: 50px;
+  max-width: 50px;
+  max-height: 100px;
   border: 1px solid black;
 }
